fix scrollbar color

--- a/src/Moonglade.Web/wwwroot/css/src/moonglade-base.css
+++ b/src/Moonglade.Web/wwwroot/css/src/moonglade-base.css
@@ -28,7 +28,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--gray);
+    background: var(--gray-5);
 }
 
 ::selection {
